--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -865,7 +865,7 @@ While the scope of this study is not on the micro-level of tool use, it is usefu
 
 #### Addressing code syntax errors
 
-Many software projects aimed at for novices use visual coding (block coding) approaches to reduce complexities of code use. This process reduced possibilities for syntax errors and often provides a limited set of blocks to reduce complexitiy. While this approach not explored here for reasons previously outlined, there are some features of the glitch code playround which help. For example, the environment can detect the file type as javascript from the file extension and then uses a static analysis tool (linter) scan the code for signs of inconsistencies of code and syntax errors and highlight them [@tomasdottir_why_2017].
+Many software projects aimed at for novices use visual coding (block coding) approaches to reduce complexities of code use. This process reduced possibilities for syntax errors and often provides a limited set of blocks to reduce complexitiy. While this approach not explored here for reasons previously outlined, there are some features of the glitch code playground which help. For example, the environment can detect the file type as javascript from the file extension and then uses a static analysis tool (linter) scan the code for signs of inconsistencies of code and syntax errors and highlight them [@tomasdottir_why_2017].
 
 In glitch such code syntax errors (GL) are highlighted via a red dot provided a quick visual indication of where the error occurred. In addition if the user hovered over the dot would give an error message. In analysis of pair interactions, I frequently (how much?) observed the non-coding peer notice and point out the red dot, thus preventing further errors. The process worked especially well when altering existing templated code, a process which is explored in the next section.
 
@@ -931,23 +931,26 @@ The a game template served to remove technical barriers to getting immediate fee
 
 NOTE - REMOVE SHARED COMMMUNITY AS NOT VERY RELEVANT FOR THIS PROJECT?
 
+As explored in the LT, Code playgrounds address issues of complexity of web coding part by providing a self contained server. However for novice  users the web location still also offers friction in terms of digital literacy issues of logging in, remembering passwords, linking to email accounts for password reminders. To circumvent these issues in P2 and P3 all participants and facilitators used a shared account for code playground the graphics editor.
+
 The ability to easily remix community projects, supports the process of becoming familiar with, and using other projects or approaches as a base. This is not just a negative copying function but one that encourages playful curiosity. It is also a foundation of professional practice [@kotsopoulos_pedagogical_2017-1].  The concept has become embedded in distributed revision control tools such as git as forking. (DEVELOP THE LINK WITH INTERNET / REMIX CULTURE?). The remix process also aligns with the use and modify stage of the UMC pedagogy explored in the LR.
 
 Practically, in novice coding communities, this is encouraged by the use of community galleries and buttons encouraging. In Scratch this is seen in buttons named see inside and remix when viewing projects. Similarly both the Thimble (used in P1) and Glitch (used in P2 and P3) prominently featured remix buttons and view source buttons in the community interface. The shared community element on the other hand was quite different for glitch due to its very mixed user base and range of different web based projects. In this learning design I took a decision to not promote with existing online communities but to focus instead on internal sharing of projects between the group.
 
-#### Shielding complexity of environment and access
 
-As explored in the LT, Code playgrounds address issues of complexity of web coding part by providing a self contained server. However for novice  users the web location still also offers friction in terms of digital literacy issues of logging in, remembering passwords, linking to email accounts for password reminders. To circumvent these issues in P2 and P3 all participants and facilitators used a shared account for code playground the graphics editor.
+#### Shielding complexity of environment
 
-A game code project using the chosen framework phaser will consisted of several interlinked files of javascript, HTML and CSS and image files. The process is relatively complex both semantically and practically to enact from first principles.
+REWRITE CAREFULLY AND MAKE LINK
 
-I therefore decided to shield learners were shielded from this complexity by using a starting template with base version of the files already created with the links already coded.  
+Any digital computer game or media project involves manipulate multi-media happening on a computer screen and to accept user input to control interactive elements. This is an inherently complex process which in order to be accessible to novice coders requires simplification.
 
-This decision mirrors the design choice in Scratch and Code.org sprite and game labs to create a default canvas screen size of the project. It is already present and visible on the creation of each new project and the user has no choice over the settings. This preset design decision align with a constructionist design principle "be careful about the use of black boxes" FIND SOURCE.
+For example, the design choice in Scratch and Code.org sprite and game labs to create a default canvas screen size of the project. It is already present and visible on the creation of each new project and the user has no choice over the settings. The motivation is to reduce initial barriers to getting started. The use of this default aligns with a constructionist design principle 'choose black boxes carefully'  [@resnick_reflections_2005, p. 119]. A black box here refers to the process of hiding away aspects or functionality of the code or processes. Block coding can be seen as another example of a black box with each block a simplified representation of underlying text code. The decisions made in the design each tool shape the skills and concepts the end user is steered towards. 
 
-A black box here refers to the process of hiding away aspects or functionality of the code or processes.  The choice here to have a default for the canvas size is to reduce initial barriers to getting started, so the user is not presented with unfamiliar options at the start of the making process.
+In my design, I have made similar decisions to shield participants from complexity to reduce cognitive load and alienation from unfamiliar language.
 
-In my design, I have made similar decisions to shield participants from complexity to reduce cognitive load and alienation from unfamiliar language. However, because of my choice to use authentic tools, while the complexity remains in code view, I decided to use a starter template to de-prioritise the impact of the underlying code complexity on the participants experience.
+A game code project using the chosen framework phaser will consisted of several interlinked files of javascript, HTML and CSS and image files. The process is relatively complex both semantically and practically to enact from first principles. I therefore decided to shield learners were shielded from this complexity by using a starting template with base version of the files already created with the links already coded.
+
+However, because of my choice to use authentic tools, while the complexity remains in code view, I decided to use a starter template to de-prioritise the impact of the underlying code complexity on the participants experience.
 
 
 ### Design choices of the starter game template
