--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -944,13 +944,13 @@ REWRITE CAREFULLY AND MAKE LINK
 
 Any digital computer game or media project involves manipulate multi-media happening on a computer screen and to accept user input to control interactive elements. This is an inherently complex process which in order to be accessible to novice coders requires simplification.
 
-For example, the design choice in Scratch and Code.org sprite and game labs to create a default canvas screen size of the project. It is already present and visible on the creation of each new project and the user has no choice over the settings. The motivation is to reduce initial barriers to getting started. The use of this default aligns with a constructionist design principle 'choose black boxes carefully'  [@resnick_reflections_2005, p. 119]. A black box here refers to the process of hiding away aspects or functionality of the code or processes. Block coding can be seen as another example of a black box with each block a simplified representation of underlying text code. The decisions made in the design each tool shape the skills and concepts the end user is steered towards. 
+For example, the design choice in Scratch and Code.org sprite and game labs to create a default canvas screen size of the project. It is already present and visible on the creation of each new project and the user has no choice over the settings. The motivation is to reduce initial barriers to getting started. The use of this default aligns with a constructionist design principle 'choose black boxes carefully'  [@resnick_reflections_2005, p. 119]. A black box here refers to the process of hiding away aspects or functionality of the code or processes. Block coding can be seen as another example of a black box with each block a simplified representation of underlying text code. The decisions made in the design each tool shape the skills and concepts the end user is steered towards.
 
-In my design, I have made similar decisions to shield participants from complexity to reduce cognitive load and alienation from unfamiliar language.
+In my design, I have made similar decisions to shield participants from complexity to reduce cognitive load and alienation from unfamiliar language. However, because of my choice to use authentic tools, while the complexity remains in code view, I decided to use a starter template to de-prioritise the impact of the underlying code complexity on the participants experience.
 
 A game code project using the chosen framework phaser will consisted of several interlinked files of javascript, HTML and CSS and image files. The process is relatively complex both semantically and practically to enact from first principles. I therefore decided to shield learners were shielded from this complexity by using a starting template with base version of the files already created with the links already coded.
 
-However, because of my choice to use authentic tools, while the complexity remains in code view, I decided to use a starter template to de-prioritise the impact of the underlying code complexity on the participants experience.
+
 
 
 ### Design choices of the starter game template
