on the affordences of the template

--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -946,43 +946,21 @@ Any digital computer game or media project involves manipulate multi-media happe
 
 For example, the design choice in Scratch and Code.org sprite and game labs to create a default canvas screen size of the project. It is already present and visible on the creation of each new project and the user has no choice over the settings. The motivation is to reduce initial barriers to getting started. The use of this default aligns with a constructionist design principle 'choose black boxes carefully'  [@resnick_reflections_2005, p. 119]. A black box here refers to the process of hiding away aspects or functionality of the code or processes. Block coding can be seen as another example of a black box with each block a simplified representation of underlying text code. The decisions made in the design each tool shape the skills and concepts the end user is steered towards.
 
-In my design, I have made similar decisions to shield participants from complexity to reduce cognitive load and alienation from unfamiliar language. However, because of my choice to use authentic tools, while the complexity remains in code view, I decided to use a starter template to de-prioritise the impact of the underlying code complexity on the participants experience.
-
-A game code project using the chosen framework phaser will consisted of several interlinked files of javascript, HTML and CSS and image files. The process is relatively complex both semantically and practically to enact from first principles. I therefore decided to shield learners were shielded from this complexity by using a starting template with base version of the files already created with the links already coded.
-
-
+In my design, I have made similar decisions to shield participants from complexity of tool use as detailed above. However, my choice to use authentic professional text-based coding language increases complexity and alienation from unfamiliar coding syntax and file structures. The next section outlines the use of a starter game template to address this issue.
 
 
 ### Design choices of the starter game template
 
-In the domain of web technology, starter templates consist of pre-built collections of HTML, Javascript, CSS and other configuration files which allow users to avoid initial configuration and thus accelerate adding features to projects. For example the Next.js web framework comes with a large range of starter templates based on common requirements of web sites [@nelson_best_2023].
+A web code project using the chosen game framework phaser consists of several interlinked files of Javascript, HTML and CSS and image files. Creating the project from first principles is relatively complex both semantically and practically. In the domain of web technology, starter templates consist of pre-built collections of HTML, JavaScript, CSS and other configuration files which allow users to avoid initial configuration and thus accelerate adding features to projects. For example the Next.js web framework comes with a large range of starter templates based on common requirements of web sites [@nelson_best_2023].
 
-The choice to use a starter template was driven by early experience in the experimental period of the design.
-<!-- In participant feedback for P1, one parent indicated that it took too long before in the planning stage and called for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an arts studio approach. -->
+My choice to use a starter template was driven by early experience in the experimental period of the design. In participant feedback for P1, one parent indicated that it took too long before in the planning stage and called for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an arts studio approach.
 
-Other parents requested additional supporting resources which explained the coding structures used in accessible but detailed ways. A request which hinted at a more structured, instruction based approach. In addition, my own motivations to explore research claims which on the engagement value of prioritising modifications to for quick impact on the game and on allowing participants choose over what they wanted to add to their game next.
+I realised that to allow for this playful experimentation, a purely structural template was insufficent and that a working game template was preferred. To create the template I drew on the structure of three online tutorials to support create a two-dimensional platformer game [^1]. 
 
-To address confusion about how to being coding a game, I introduced a working code example as a starter game template using the phaser library. The use of template was an immediate, intuitive way to bring something to the table as a starting point to develop. The template was based on a prominent tutorial on the phaser website to create a two-dimensional platformer game[^1]. I adapted the final game, removing out code with a focus on simplifying the structure and readability.
+<!-- The use of template was an immediate, intuitive way to bring something to the table as a starting point to develop.  -->
 
-
-The template in this case followed the following structure:
-- a beginning section out side of a function declaring variables
-- a preload function which loads assets into the game
-- a create function which sets up the initial game
-- an update function which listens to and responds to user input, e.g. moving a player on the screen
-
-The following illustration from the step-based instructions illustrates the structure for participants.
-
-![](./Pictures/overview_of_structure_cropped.png){width=95%}
-4.x - Structure explained in Manual for P2 and P3
-
-In P1, I found that as I worked with the learners to respond to their requests to add in new elements to the game, I was able to to reference different parts of the template and thus build their familiarity with the code.
-
-At one stage I did a test of that process by printing out different elements of the template and asking them to complete them roughly in order as a jigsaw activity. The participants expressed surprise at how much familiarity they had built up with the code.
-INSERT QUOTE FROM SU AND TOBY
-
-Despite building familiarity with code, at this stage event simple game changes or adding new elements still required significant support.
-
+<!-- Other parents requested additional supporting resources which explained the coding structures used in accessible but detailed ways. A request which hinted at a more structured, instruction based approach.  -->
+<!-- In addition, my own motivations to explore research claims which on the engagement value of prioritising modifications to for quick impact on the game and on allowing participants choose over what they wanted to add to their game next. -->
 
 <!-- follow the Use-Modify-Create model to build familiarity with and to scaffold the adaptation and use of coding constructs [@lee_computational_2011]. -->
 
@@ -1018,7 +996,10 @@ A later discussion section in this chapter illustrates a more complex interactio
 
 #### Key Design affordances included in the game template
 
-The initial use of a template was an intuitive response based on my own experience of teaching technology. However, the template included more code than a structural template. At the end of P1, I introduced design elements which highlighted code which altered easily recognisable game experience features in a way which aligned with research on the potential of half-baked games to structure game making. I began to identify simple changes to the code that could provoke a high impact on the game experiences. This section explores these designs decisions with brief analysis of the impact of them. Fuller analysis follows in chapters five and six. To help structure this initial analysis, I draw on HCI theory and in particular the concept of affordances.
+The initial use of a template was an intuitive response based on my own experience of teaching technology. However, the template included more code than a structural template. At the end of P1, I introduced design elements which highlighted code which altered easily recognisable game experience features in a way which aligned with research on the potential of half-baked games to structure game making. EXAMPLE? / eXPLAIN?
+
+I began to identify simple changes to the code that could provoke a high impact on the game experiences. This section explores these designs decisions with brief analysis of the impact of them. Fuller analysis follows in chapters five and six. To help structure this initial analysis, I draw on HCI theory and in particular the concept of affordances (with a mediated action perspective) understood from a socio-cultural perpsective as 'technology affordances as possibilities for human actions mediated by cultural means' [@kaptelinin_affordances_2012, p.927].
+
 
 <!-- Descriptions of three design techniques to the template to make quick modification of the game easier follow. -->
 
@@ -1027,6 +1008,34 @@ The initial use of a template was an intuitive response based on my own experien
 <!-- list of changes
 background colour of the game
 game layout of the platforms - hazards and food to collect. -->
+
+
+**Creating a simplified and clear project structure**
+
+The HTML and CSS of the base project was kept to a minimum and by default participants would see only the JavaScript file names game.js.
+
+![](./Pictures/simple_game_template_1.png){width=95%}
+
+4.x - Code environment for starting template for for P2 and P3
+
+The template in this case followed the following structure:
+- a beginning section out side of a function declaring variables
+- a preload function which loads assets into the game
+- a create function which sets up the initial game
+- an update function which listens to and responds to user input, e.g. moving a player on the screen
+
+The following illustration from the step-based instructions illustrates the structure for participants.
+
+![](./Pictures/overview_of_structure_cropped.png){width=95%}
+
+4.x - Structure explained in Manual for P2 and P3
+
+In P1, I found that as I worked with the learners to respond to their requests to add in new elements to the game, I was able to to reference different parts of the template and thus build their familiarity with the code.
+
+At one stage I did a test of that process by printing out different elements of the template and asking them to complete them roughly in order as a jigsaw activity. The participants expressed surprise at how much familiarity they had built up with the code.
+INSERT QUOTE FROM SU AND TOBY
+
+Despite building familiarity with code, at this stage event simple game changes or adding new elements still required significant support.
 
 **Variable editing for player movement**
 
@@ -1588,10 +1597,9 @@ https://docs.google.com/document/d/1DRgpgIUfq5XIktYy-lX4WlviUDnffNc0v8SOeLGgHho/
 [^2]: https://mickfuzz.github.io/makecode-platformer-101/
 [^3]: https://glitch-game-makers-manual.glitch.me/
 [^4]: map of GDP
-
 [^8]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions#arrays
 [^9]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions#change-listener
 [^10]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions#systems-dynamics
 [^11]: https://phaser.io/examples/v2
-Example of code in google docs
-[^12]:https://docs.google.com/document/d/1zUw4xpWT9p2LIqTaZdVN0JRpShvVFG3UQqmsxRriE6s/edit?pli=1
+[^12]:https://docs.google.com/document/d/1zUw4xpWT9p2LIqTaZdVN0JRpShvVFG3UQqmsxRriE6s/edit?pli=1 Example of code in google docs
+Gilbert is the worsted name.
