on half baked games

--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -953,9 +953,13 @@ In my design, I have made similar decisions to shield participants from complexi
 
 A web code project using the chosen game framework phaser consists of several interlinked files of Javascript, HTML and CSS and image files. Creating the project from first principles is relatively complex both semantically and practically. In the domain of web technology, starter templates consist of pre-built collections of HTML, JavaScript, CSS and other configuration files which allow users to avoid initial configuration and thus accelerate adding features to projects. For example the Next.js web framework comes with a large range of starter templates based on common requirements of web sites [@nelson_best_2023].
 
-My choice to use a starter template was driven by early experience in the experimental period of the design. In participant feedback for P1, one parent indicated that it took too long before in the planning stage and called for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an arts studio approach.
+My choice to use a starter template was driven by early experience in the experimental period of the design. In participant feedback for P1, one parent indicated that it took too long before in the planning stage and called for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an arts studio approach. I realised that to allow for this playful experimentation, a purely structural template was insufficent and that a working game template was preferred. To create the template I drew on the structure of three online tutorials to support create a two-dimensional platformer game [^1].
 
-I realised that to allow for this playful experimentation, a purely structural template was insufficent and that a working game template was preferred. To create the template I drew on the structure of three online tutorials to support create a two-dimensional platformer game [^1]. 
+
+The following section explores these designs decisions by drawing on HCI theory and in particular the concept of affordances (with a mediated action perspective) understood from a socio-cultural perpsective as 'technology affordances as possibilities for human actions mediated by cultural means' [@kaptelinin_affordances_2012, p.927].
+
+
+
 
 <!-- The use of template was an immediate, intuitive way to bring something to the table as a starting point to develop.  -->
 
@@ -996,9 +1000,16 @@ A later discussion section in this chapter illustrates a more complex interactio
 
 #### Key Design affordances included in the game template
 
-The initial use of a template was an intuitive response based on my own experience of teaching technology. However, the template included more code than a structural template. At the end of P1, I introduced design elements which highlighted code which altered easily recognisable game experience features in a way which aligned with research on the potential of half-baked games to structure game making. EXAMPLE? / eXPLAIN?
+The initial use of a working structural template was an intuitive response based on my own experience of teaching technology which aligns with UMC methods.
 
-I began to identify simple changes to the code that could provoke a high impact on the game experiences. This section explores these designs decisions with brief analysis of the impact of them. Fuller analysis follows in chapters five and six. To help structure this initial analysis, I draw on HCI theory and in particular the concept of affordances (with a mediated action perspective) understood from a socio-cultural perpsective as 'technology affordances as possibilities for human actions mediated by cultural means' [@kaptelinin_affordances_2012, p.927].
+To help guide the experimentation of users, I  highlight simple changes to the code that were easily recognisable game experience features.
+
+The following sections detail affordences that I have identied
+
+IN addition I looked for affordences where small changes could provoke a high impact on the game experiences.
+
+Particpants first interacted with the game after being challenged to complete it despite it being initially set in a state which prevented progress. The game was broken in an obvious way which invited participants, in this case the player's maximum jump trajectory was not sufficient to progress via a jump to the first platform. This foundation aligns with concept of half-baked games where incompleteness or bugs in behavour are a provocation to participants to correct or to further modify them [@kynigos_children_2018]. 
+
 
 
 <!-- Descriptions of three design techniques to the template to make quick modification of the game easier follow. -->
